Fix twitter widget styles on Firefox ESR

--- a/iwg_blog/assets/blog/scss/templates/partials/widget/widget-latest-tweets/_widget-latest-tweets.scss
+++ b/iwg_blog/assets/blog/scss/templates/partials/widget/widget-latest-tweets/_widget-latest-tweets.scss
@@ -3,6 +3,10 @@
         @include list-reset;
         padding-right: round(10px*$x);
         padding-left: round(10px*$x);
+
+        iframe {
+            width: 100% !important;
+        }
     }
     &__item {
         position: relative;
